--- a/index666.htm
+++ b/index666.htm
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>我的第一个网页</title>
+  <title>开心的小伊一</title>
   <style>
     body {
       background-color: #f0f0f0;
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>你好，世界！</h1>
-  <p>这是我的第一个网页。</p>
+  <h1>你好，伊一！</h1>
+  <p>二岁小宝宝开心的每一天。</p>
 </body>
 </html>
