--- a/index666.htm
+++ b/index666.htm
@@ -20,7 +20,9 @@
 </head>
 <body>
   <h1>你好，伊一！</h1>
-  <p>二岁小宝宝开心的每一天。</p>
+  <p>二岁小宝宝开心的每一天。
+   background-color: #f6f6f6;
+  </p>
 </body>
   <body>
 <h1>为我们伊一点个赞吧！</h1>
